Fixing spacing in preferences page

--- a/src/preferences.css
+++ b/src/preferences.css
@@ -39,14 +39,10 @@ input {
     height: 90%;
 }
 
-.notification-setting, .theme-setting {
-    margin-bottom: 20px;
-    display: flex;
-    line-height: 30px;
-}
-
-.notification-option, .theme-option {
-    margin-bottom: 20px;
+.notification-setting, 
+.theme-setting, 
+.notification-option, 
+.theme-option  {
     display: flex;
     line-height: 30px;
 }
